--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,10 @@
 .wrapper {
-  max-width: 1920px;
+  max-width: 100%;
   margin: 30px auto;
 }
 
 .header {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -12,16 +12,30 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 2rem;
+  z-index: 99;
+  background-color: #fff;
+  padding: 3.5rem 10rem;
+  height: 10rem;
+}
+
+.header__logo {
+  cursor: pointer;
 }
 
 .first-image {
   height: 3rem;
+  padding-right: 0.8rem;
 }
 
 .second-image {
   vertical-align: center;
-  margin-top: 0.7rem;
+  margin-top: 0.9rem;
   height: 2rem;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .header__menu {
@@ -39,13 +53,372 @@
   color: black;
 }
 
+.header__list li a.active {
+  color: red;
+  background: url("../assets/img-home/Rectangle 2.png") center bottom no-repeat;
+  padding-bottom: 1rem;
+}
+
 .header__list li a:hover {
   color: red;
 }
 
-.active {
-  color: red;
-  background: url("../assets/img-home/Rectangle 2.png") center bottom no-repeat;
+.header__list li a.header__search {
+  background: url("../assets/img-home/search.png") 0 0.4rem no-repeat;
+  width: 2rem;
+  height: 2rem;
+  display: inline-block;
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+}
+
+.header__list li a.header__search:hover {
+  background: url("../assets/img-home/search-red.png") 0 0.4rem no-repeat;
+}
+
+.header__list li a.header__bag {
+  background: url("../assets/img-home/shopping-bag.png") 0 0.4rem no-repeat;
+  width: 2rem;
+  height: 2rem;
+  display: inline-block;
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+}
+
+.header__list li a.header__bag:hover {
+  background: url("../assets/img-home/shopping-bag-red.png") 0 0.4rem no-repeat;
+}
+
+.header__list li a img {
+  position: absolute;
+  left: 1rem;
+  top: -0.2rem;
+}
+
+.header__list li a.header__bag .header__quantity {
+  display: inline-block;
+  color: #fff;
+  position: relative;
+  top: 0.15rem;
+  left: 1.3rem;
+  width: 1.1rem;
+  height: 0.9rem;
+  line-height: 50%;
+  vertical-align: top;
+  font-size: 1rem;
+  background-color: #ff5d7d;
+}
+
+.header__list li a.header__user {
+  background: url("../assets/img-home/user.png") 0 0.4rem no-repeat;
+  width: 2rem;
+  height: 2rem;
+  display: inline-block;
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+}
+
+.header__list li a.header__user:hover {
+  background: url("../assets/img-home/user-red.png") 0 0.4rem no-repeat;
+}
+
+.container__head {
+  background: url("../assets/img-home/Rectangle 1.png") 0 0 no-repeat;
+  background-size: 100% 100%;
+  max-width: 95%;
+  margin: 2rem auto;
+}
+
+.container__title {
+  margin: 5rem;
+}
+
+.container__title h1 {
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 120%;
+  color: #404040;
+}
+
+.container__title p {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 150%;
+  color: #404040;
+  padding: 3rem 0;
+}
+
+.container__logo {
+  padding-right: 15rem;
+}
+
+.container__banner {
+  margin: 4rem auto;
+  max-width: 90%;
+}
+
+.container__delivery {
+  background: url("../assets/img-home/Rectangle 3.png") 0 0 no-repeat;
+  background-size: 100% 100%;
+  width: 100%;
+  margin-right: 1rem;
+}
+
+.delivery__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.delivery__logo img {
+  height: 90%;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 2rem;
+  line-height: 120%;
+  color: #404040;
+  margin: 4rem 0 2rem 4rem;
+}
+
+.container__linking {
+  font-weight: normal;
+  font-size: 1.2rem;
+  line-height: 150%;
+  color: #404040;
+  margin-left: 4rem;
+}
+
+.container__linking:hover {
+  color: #ff5d7d;
+}
+
+.container__garden {
+  background: url("../assets/img-home/Rectangle 4.png") 0 0 no-repeat;
+  background-size: 100% 100%;
+  width: 100%;
+  margin-left: 1rem;
+}
+
+.garden__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container__list {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.container__list li {
+  width: 17rem;
+}
+
+.container__block {
+  height: 10rem;
+  width: 15rem;
+  margin-right: 0;
+}
+
+.container__block a {
+  max-height: 110%;
+  width: 15rem;
+  display: block;
+}
+
+.container__block a img {
+  height: 5rem;
+  width: 5rem;
+  display: block;
+  margin: 1.5rem auto;
+}
+
+.container__block a p {
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #b4b4b4;
+}
+
+h6 {
+  font-weight: 500;
+  font-size: 1.2rem;
+  line-height: 150%;
+  color: #404040;
+  width: 15rem;
+  text-align: center;
+}
+
+.container__beauties {
+  width: 90%;
+  margin: 10rem auto 3rem;
+  font-weight: bold;
+  font-size: 2rem;
+  line-height: 120%;
+  color: #404040;
+}
+
+.container__items {
+  width: 90%;
+  margin: 0 8rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.container__wrap {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 21%;
+          flex: 1 0 21%;
+  margin-bottom: 3rem;
+}
+
+.container__item {
+  width: 18rem;
+  height: 28rem;
+  border: 1px solid #e7e7e7;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 10px;
   padding-bottom: 1rem;
+  position: relative;
+}
+
+.container__item img {
+  width: 80%;
+  margin: 1.5rem;
+}
+
+.container__item h5 {
+  font-weight: bold;
+  font-size: 1.2rem;
+  line-height: 120%;
+  color: #404040;
+  margin: 0 1.5rem;
+}
+
+.container__item > p {
+  font-weight: bold;
+  font-size: 1.5rem;
+  line-height: 120%;
+  color: #404040;
+  margin: 0 1.5rem;
+  position: absolute;
+  top: 25rem;
+}
+
+.container__item button {
+  display: none;
+}
+
+.opacity {
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #b4b4b4;
+  margin: 0 1.5rem;
+  text-align: left;
+}
+
+.container__item:hover {
+  width: 18rem;
+  height: 35rem;
+  position: absolute;
+  z-index: 2;
+  background-color: #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
+}
+
+.container__item:hover button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 15rem;
+  height: 4rem;
+  background: #5e9e5e;
+  border-radius: 10px;
+  margin: 8rem auto 0;
+}
+
+.container__item:hover button img {
+  width: 1.4rem;
+}
+
+.container__item:hover button p {
+  font-weight: 600;
+  font-size: 1.2rem;
+  line-height: 100%;
+  text-align: left;
+  letter-spacing: 0.05em;
+  color: #ffffff;
+  margin-right: 1.2rem;
+}
+
+.container__button {
+  display: block;
+  width: 18rem;
+  height: 4rem;
+  margin: 0 auto 6rem;
+  border: 1px solid #5e9e5e;
+  border-radius: 10px;
+  background-color: #fff;
+}
+
+.container__button p {
+  font-weight: 600;
+  font-size: 1.2rem;
+  line-height: 110%;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #5e9e5e;
+  margin: 0 auto;
+}
+
+.container__information {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.container__information p {
+  font-size: 1.2rem;
+  line-height: 170%;
+  color: #404040;
+  margin: 1rem auto;
+}
+
+.color {
+  font-weight: bold;
+  font-size: 2.5rem;
+  line-height: 110%;
+  background: -webkit-gradient(linear, left top, right top, from(#ff5d7d), to(#7b61ff));
+  background: linear-gradient(90deg, #ff5d7d 0%, #7b61ff 100%);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 2rem;
+}
+
+.footer {
+  margin-top: 2rem;
 }
 /*# sourceMappingURL=app.component.css.map */
