--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,15 +11,20 @@
                 <li><a href="">ABOUT US</a></li>
                 <li><a href="">NEWS</a></li>
                 <li><a href="">CONTACTS</a></li>
-                <li><a href=""><img src="../assets/img-home/search.png" alt="search"></a></li>
-                <li><a href=""><img src="../assets/img-home/shopping-bag.png" alt="bag"></a></li>
-                <li><a href=""><img src="../assets/img-home/user.png" alt="sign"></a></li>
+                <li><a class="header__search " href="#"></a> </li>
+                <li>
+                    <a class="header__bag " href="">
+                        <span><img src="../assets/img-home/Frame 2.png" alt="quantity"></span>
+                        <span class="header__quantity">10</span>
+                    </a>
+                </li>
+                <li><a class="header__user " href=""></a></li>
             </ul>
         </div>
 
     </header>
     <div class="container">
-        <div class="container__head">
+        <div class="container__head flex justify-content-between ">
             <div class="container__title">
                 <h1>Bouquets for your holidays!</h1>
                 <p>Just like in the picture!</p>
@@ -28,24 +33,34 @@
                 <img src="../assets/img-home/flowers.jpg" alt="flowers">
             </div>
         </div>
-        <div class="container__banner">
-            <div class="container__delivery">
-                <div class="container__delivery title">
-                    Flower delivery in Minsk
+        <div class="container__banner flex justify-content-between ">
+            <div class="container__delivery flex justify-content-between ">
+                <div>
+                    <div class="container__deliverys title">
+                        Flower delivery in Minsk
+                    </div>
+                    <a class="container__linking" href="">More details</a>
                 </div>
-                <a href="">More details</a>
+                <div class="delivery__logo">
+                    <img src="../assets/img-home/car.jpg" alt="car">
+                </div>
             </div>
-            <div class="container__garden">
-                <div class="container__garden title">
-                    Everything for your garden
+            <div class="container__garden flex justify-content-between">
+                <div>
+                    <div class="container__gardens title">
+                        Everything for your garden
+                    </div>
+                    <a class="container__linking" href="">Discounts up to 50%</a>
                 </div>
-                <a href="">Discounts up to 50%</a>
+                <div class="garden__logo">
+                    <img src="../assets/img-home/Frame 11.png" alt="garden">
+                </div>
             </div>
         </div>
         <div class="container__slider">
-            <ul class="container__list">
+            <ul class="container__list flex justify-content-between">
                 <li>
-                    <div>
+                    <div class="container__block flex justify-content-center">
                         <a href="">
                             <img src="../assets/img-home/logo.jpg" alt="logo1">
                             <h6>Fresh flowers</h6>
@@ -54,7 +69,7 @@
                     </div>
                 </li>
                 <li>
-                    <div>
+                    <div class="container__block flex justify-content-center">
                         <a href="">
                             <img src="../assets/img-home/plant 1.png" alt="plant">
                             <h6>Indoor plants</h6>
@@ -63,7 +78,7 @@
                     </div>
                 </li>
                 <li>
-                    <div>
+                    <div class="container__block flex justify-content-center">
                         <a href="">
                             <img src="../assets/img-home/sprout 1.png" alt="sprout">
                             <h6>Planting material</h6>
@@ -72,7 +87,7 @@
                     </div>
                 </li>
                 <li>
-                    <div>
+                    <div class="container__block flex justify-content-center">
                         <a href="">
                             <img src="../assets/img-home/vase 1.png" alt="vase">
                             <h6>Floral accessories</h6>
@@ -81,7 +96,7 @@
                     </div>
                 </li>
                 <li>
-                    <div>
+                    <div class="container__block flex justify-content-center">
                         <a href="">
                             <img src="../assets/img-home/bonsai 1.png" alt="bonsai">
                             <h6>Compositions made of artificial materials...</h6>
@@ -90,7 +105,7 @@
                     </div>
                 </li>
                 <li>
-                    <div>
+                    <div class="container__block flex justify-content-center">
                         <a href="">
                             <img src="../assets/img-home/fountain 1.png" alt="fontain">
                             <h6>Landscape design</h6>
@@ -100,82 +115,130 @@
                 </li>
             </ul>
         </div>
-        <div class="container__beauties title">
+        <div class="container__beauties">
             Look at the these beauties!
         </div>
-        <div class="container__items">
-            <div class="container__item">
-                <img src="../assets/img-home/image 1.png" alt="img1">
-                <h5>Bouquet 117 (21 gerberas)</h5>
-                <h6 class="opacity">Fresh flowers</h6>
-                <p>Not in stock</p>
+        <div class="container__items flex ">
+            <div class="container__wrap">
+                <div class="container__item">
+                    <img src="../assets/img-home/image 1.png" alt="img1">
+                    <h5>Bouquet 117 (21 gerberas)</h5>
+                    <h6 class="opacity">Fresh flowers</h6>
+                    <p>Not in stock</p>
+                    <button>
+                        <img src="../assets/img-home/button-bag.png" alt="baggy">
+                        <p>ADD TO CART</p>
+                    </button>
+                </div>
             </div>
-            <div class="container__item activity">
-                <img src="../assets/img-home/image 2.png" alt="img2">
-                <h5>You’re Precious Bonquet</h5>
-                <h6 class="opacity">Fresh flowers</h6>
-                <p>€83.49 EUR</p>
-                <button>
-                    <img src="../assets/img-home/button-bag.png" alt="baggy">
-                    <p>ADD TO CART</p>
-                </button>
+            <div class="container__wrap">
+                <div class="container__item activity">
+                    <img src="../assets/img-home/image 2.png" alt="img2">
+                    <h5>You’re Precious Bonquet</h5>
+                    <h6 class="opacity">Fresh flowers</h6>
+                    <p>€83.49 EUR</p>
+                    <button>
+                        <img src="../assets/img-home/button-bag.png" alt="baggy">
+                        <p>ADD TO CART</p>
+                    </button>
+                </div>
             </div>
-            <div class="container__item">
-                <img src="../assets/img-home/image 3.png" alt="img3">
-                <h5>Smiles and Sunshine</h5>
-                <h6 class="opacity">Fresh flowers</h6>
-                <p>€22.47 EUR</p>
+            <div class="container__wrap">
+                <div class="container__item">
+                    <img src="../assets/img-home/image 3.png" alt="img3">
+                    <h5>Smiles and Sunshine</h5>
+                    <h6 class="opacity">Fresh flowers</h6>
+                    <p>€22.47 EUR</p>
+                    <button>
+                        <img src="../assets/img-home/button-bag.png" alt="baggy">
+                        <p>ADD TO CART</p>
+                    </button>
+                </div>
             </div>
-            <div class="container__item">
-                <img src="../assets/img-home/image 4 .png" alt="img4">
-                <h5>Light of my Life</h5>
-                <h6 class="opacity">Fresh flowers</h6>
-                <p>€62.17 EUR</p>
+            <div class="container__wrap">
+                <div class="container__item">
+                    <img src="../assets/img-home/image 4 .png" alt="img4">
+                    <h5>Light of my Life</h5>
+                    <h6 class="opacity">Fresh flowers</h6>
+                    <p>€62.17 EUR</p>
+                    <button>
+                        <img src="../assets/img-home/button-bag.png" alt="baggy">
+                        <p>ADD TO CART</p>
+                    </button>
+                </div>
             </div>
-            <div class="container__item">
-                <img src="../assets/img-home/image 5.png" alt="img5">
-                <h5>Summer in the Cape</h5>
-                <h6 class="opacity">Fresh flowers</h6>
-                <p>€65.56 EUR</p>
+            <div class="container__wrap">
+                <div class="container__item">
+                    <img src="../assets/img-home/image 5.png" alt="img5">
+                    <h5>Summer in the Cape</h5>
+                    <h6 class="opacity">Fresh flowers</h6>
+                    <p>€65.56 EUR</p>
+                    <button>
+                        <img src="../assets/img-home/button-bag.png" alt="baggy">
+                        <p>ADD TO CART</p>
+                    </button>
+                </div>
             </div>
-            <div class="container__item">
-                <img src="../assets/img-home/image 6.png" alt="img6">
-                <h5>Smooth Sailing</h5>
-                <h6 class="opacity">Fresh flowers</h6>
-                <p>€83.49 EUR</p>
+            <div class="container__wrap">
+                <div class="container__item">
+                    <img src="../assets/img-home/image 6.png" alt="img6">
+                    <h5>Smooth Sailing</h5>
+                    <h6 class="opacity">Fresh flowers</h6>
+                    <p>€83.49 EUR</p>
+                    <button>
+                        <img src="../assets/img-home/button-bag.png" alt="baggy">
+                        <p>ADD TO CART</p>
+                    </button>
+                </div>
             </div>
-            <div class="container__item">
-                <img src="../assets/img-home/image 7.png" alt="img7">
-                <h5>Life’s Peach</h5>
-                <h6 class="opacity">Fresh flowers</h6>
-                <p>€110.13 EUR</p>
+            <div class="container__wrap">
+                <div class="container__item">
+                    <img src="../assets/img-home/image 7.png" alt="img7">
+                    <h5>Life’s Peach</h5>
+                    <h6 class="opacity">Fresh flowers</h6>
+                    <p>€110.13 EUR</p>
+                    <button>
+                        <img src="../assets/img-home/button-bag.png" alt="baggy">
+                        <p>ADD TO CART</p>
+                    </button>
+                </div>
             </div>
-            <div class="container__item">
-                <img src="../assets/img-home/image 8.png" alt="img8">
-                <h5>Bouquet 117 (21 gerberas)</h5>
-                <h6 class="opacity">Fresh flowers</h6>
-                <p>€60.04 EUR</p>
+            <div class="container__wrap">
+                <div class="container__item">
+                    <img src="../assets/img-home/image 8.png" alt="img8">
+                    <h5>Bouquet 117 (21 gerberas)</h5>
+                    <h6 class="opacity">Fresh flowers</h6>
+                    <p>€60.04 EUR</p>
+                    <button>
+                        <img src="../assets/img-home/button-bag.png" alt="baggy">
+                        <p>ADD TO CART</p>
+                    </button>
+                </div>
             </div>
         </div>
-        <div class="container__button">
-            <button>
-                <p>Browse catalog</p>
-            </button>
-        </div>
+
+        <button class="container__button">
+            <p>Browse catalog</p>
+        </button>
+
         <div class="container__information">
             <h2 class="color">
                 Flower delivery in Minsk
             </h2>
-            <p>Flowers can and should be given not only for holidays, but also for no reason. And flowers with delivery
-                are convenient, fast and reliable. In our online store, you can order stunning bouquets for your home or
+            <p>Flowers can and should be given not only for holidays, but also for no reason. And flowers with
+                delivery
+                are convenient, fast and reliable. In our online store, you can order stunning bouquets for your
+                home or
                 office, which can not fail to impress. We will deliver them to any convenient point in Minsk. If
                 desired, the bouquet is supplemented with a postcard, the text of which is chosen by the client.
             </p>
             <p>Flower delivery Minsk is a service that is very popular in the Republic of Belarus. You can order a
                 ready-made composition or a thematic bouquet for a birthday, name day, wedding, anniversary,
                 congratulations and other occasions. Roses (peony, bush), tulips, daisies, lilies, orchids,
-                chrysanthemums, gerberas, alstroemeria, irises, peonies, eustomas, carnations are only a part of those
-                flowers that are used for making bouquets. Forget about visiting a florist. We will make a bouquet for
+                chrysanthemums, gerberas, alstroemeria, irises, peonies, eustomas, carnations are only a part of
+                those
+                flowers that are used for making bouquets. Forget about visiting a florist. We will make a bouquet
+                for
                 you that meets your wishes and requirements, and we will deliver it for free in Minsk and the Minsk
                 district: Central, Sovetsky, Pervomaysky, Partizansky, Zavodsky, Leninsky, Oktyabrsky, Moskovsky,
                 Frunzensky.</p>
