layout about us

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,1 +1,52 @@
-<p>aboutus works!</p>
+<div class="wrapper">
+    <div class="container">
+        <div class="container__line"></div>
+        <div class="container__path flex justify-content-start">
+            <div class="container__home">
+                <a routerLink="/">Home</a>
+            </div>
+            <div class="container__angle">
+                <img src="../../assets/img-aboutus/Angle.png" alt="angle">
+            </div>
+            <div class="container__aboutus">About us</div>
+        </div>
+        <div class="container__title">About us</div>
+        <div class="container__img1">
+            <img src="../../assets/img-aboutus/image 255.jpg" alt="flowers">
+        </div>
+        <p class="container__text1">For several years now, our company has been delighting customers with the delivery
+            of flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees
+            and are always confident that your order will be delivered at the right time to the right place.</p>
+        <div class="container__flowers flex justify-content-between">
+            <div><img src="../../assets/img-aboutus/image 3.1png.png" alt="flower1"></div>
+            <div><img src="../../assets/img-aboutus/image 4.1.png" alt="flower2"></div>
+            <div><img src="../../assets/img-aboutus/image 5.1.png" alt="flower3"></div>
+        </div>
+        <p class="container__figcapture">Examples of our work</p>
+        <p class="container__text2">We always know where your order is located, at any time it can be tracked thanks to
+            the means of mobile communication and navigation that each of our couriers has, regardless of whether he
+            moves on foot or using one of the types of his own transport. </p>
+        <p class="container__text3">We are pleased with the constant influx of new customers, and we value each of them.
+            And our reputation is growing every day thanks to constant feedback from grateful customers who have used
+            our services.</p>
+        <div class="container__img2">
+            <img src="../../assets/img-aboutus/image 256.jpg" alt="flowers">
+        </div>
+        <div class="container__advantages">
+            <div class="container__title2">
+                Our advantages
+            </div>
+            <ul class="container__list">
+                <li>All the flowers that you see on the site are available. The flowers are updated very often and we
+                    guarantee that the flowers you choose will be fresh. The site is updated every day.</li>
+                <li>You can see live photos of bouquets in the hands of girls. This will help you understand what a
+                    bouquet looks like, what number and size of flowers you need.</li>
+                <li>We do not limit you in the number of flowers in one bouquet. You can also choose different flowers
+                    in one bouquet.</li>
+                <li>Our prices do not differ from the prices in various flower shops, and in most cases even lower than
+                    them. But you don't have to go anywhere. We will deliver it to you, and at the same time we will
+                    provide a very wide selection.</li>
+            </ul>
+        </div>
+    </div>
+</div>
