--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,16 +1,13 @@
-.wrapper {
-    max-width: 100%;
-    margin: 30px auto;
-}
 .header {
+    position: sticky;
+    top: 0rem;
+    z-index: 99;
+    background-color: #fff;
     width: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    position: sticky;
-    top: 2rem;
-    z-index: 99;
-    background-color: #fff;
+
     padding: 3rem 6rem;
     height: 8rem;
 }
@@ -90,19 +87,16 @@
             url("../../assets/img-home/Rectangle2.png") 0 2.3rem no-repeat;
         padding-bottom: 1rem;
     }
-    img {
-        position: absolute;
-        left: 1rem;
-        top: -0.2rem;
-    }
     .header__quantity {
         display: inline-block;
         color: #fff;
         position: relative;
-        top: 0.15rem;
-        left: 1.3rem;
-        width: 1.1rem;
-        height: 0.9rem;
+        top: -0.2rem;
+        left: 1rem;
+        width: 1.7rem;
+        height: 1.3rem;
+        border-radius: 8px;
+        padding: 6px 5px;
         line-height: 50%;
         vertical-align: top;
         font-size: 1rem;
@@ -135,26 +129,6 @@
 @media (max-width: 1284px) {
     .header__icon {
         width: 20%;
-    }
-    .header__list li a {
-        .header__quantity {
-            display: inline-block;
-            color: #fff;
-            position: relative;
-            top: -0.45rem;
-            left: 0.4rem;
-            width: 1.1rem;
-            height: 0.9rem;
-            line-height: 50%;
-            vertical-align: top;
-            font-size: 1rem;
-            background-color: rgba(255, 93, 125, 1);
-        }
-        img {
-            position: absolute;
-            left: 0;
-            top: -0.8rem;
-        }
     }
 }
 @media (max-width: 1200px) {
