--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,6 +34,8 @@
                 </div>
             </div>
         </div>
+        <app-slider></app-slider>
+
         <div class="container__slider">
             <ul class="container__list flex justify-content-between">
                 <li>
