--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -14,13 +14,13 @@
 
     h1 {
         font-weight: 800;
-        font-size: 48px;
+        font-size: 3rem;
         line-height: 120%;
         color: #404040;
     }
     p {
         font-weight: 500;
-        font-size: 24px;
+        font-size: 1.8rem;
         line-height: 150%;
         color: #404040;
         padding: 3rem 0;
