--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,34 @@
+@import url(d:\Project\my-app\node_modules\swiper\swiper-bundle.css);
+@import url(d:\Project\my-app\node_modules\swiper\swiper-bundle.min.css);
+.swiper {
+  width: 100%;
+  height: 14rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-slide {
+  text-align: top;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: top;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .wrapper {
   max-width: 100%;
   margin: 30px auto;
@@ -99,10 +130,6 @@
   margin: 0 auto;
 }
 
-.container__list li {
-  width: 17rem;
-}
-
 .container__block {
   height: 10rem;
   width: 15rem;
@@ -110,7 +137,7 @@
 }
 
 .container__block a {
-  max-height: 110%;
+  max-height: 100%;
   width: 15rem;
   display: block;
 }
@@ -141,7 +168,7 @@ h6 {
 
 .container__beauties {
   width: 90%;
-  margin: 10rem auto 3rem;
+  margin: 5rem auto 3rem;
   font-weight: bold;
   font-size: 2rem;
   line-height: 120%;
