--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -2,4 +2,174 @@
   width: 100%;
   margin: 0 auto;
 }
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.container__line {
+  background: #404040;
+  opacity: 0.2;
+  height: 1px;
+}
+
+.container__path {
+  margin: 2rem auto;
+}
+
+.container__home {
+  margin-right: 2rem;
+}
+
+.container__home a {
+  font-weight: normal;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #404040;
+}
+
+.container__angle {
+  margin-right: 2rem;
+  margin-top: 0.35rem;
+}
+
+.container__news {
+  font-weight: normal;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #bdbdbd;
+}
+
+.container__title {
+  background: -webkit-gradient(linear, left top, right top, from(#ff5d7d), to(#7b61ff));
+  background: linear-gradient(90deg, #ff5d7d 0%, #7b61ff 100%);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 800;
+  font-size: 3rem;
+  line-height: 120%;
+  margin-top: 3rem;
+  margin-bottom: 2.5rem;
+}
+
+.container__text {
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+  width: 75%;
+  font-weight: normal;
+  font-size: 1.6rem;
+  line-height: 150%;
+  color: #404040;
+}
+
+.container__banner {
+  margin: 4rem auto;
+  max-width: 100%;
+}
+
+.container__delivery {
+  background: url("../../assets/img-home/Rectangle 3.png") 0 0 no-repeat;
+  background-size: 100% 100%;
+  width: 100%;
+  margin-right: 1rem;
+}
+
+.delivery__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.delivery__logo img {
+  height: 90%;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 2rem;
+  line-height: 120%;
+  color: #404040;
+  margin: 4rem 0 2rem 4rem;
+}
+
+.container__linking {
+  font-weight: normal;
+  font-size: 1.2rem;
+  line-height: 150%;
+  color: #404040;
+  margin-left: 4rem;
+}
+
+.container__linking:hover {
+  color: #ff5d7d;
+}
+
+.container__garden {
+  background: url("../../assets/img-home/Rectangle 4.png") 0 0 no-repeat;
+  background-size: 100% 100%;
+  width: 100%;
+  margin-left: 1rem;
+}
+
+.garden__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container__titles {
+  margin: 0.5rem auto 0.5rem;
+  font-weight: bold;
+  font-size: 2rem;
+  line-height: 120%;
+  color: #404040;
+}
+
+.container__date {
+  margin-bottom: 1rem;
+  width: 75%;
+  font-weight: normal;
+  font-size: 1.6rem;
+  line-height: 150%;
+  color: #404040;
+}
+
+.my-pag /deep/ .ngx-pagination .current {
+  color: #404040;
+  border: 1px solid red;
+  background: #fff;
+}
+
+.my-pag /deep/ .ngx-pagination li {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 10px;
+  border: 1px solid grey;
+}
+
+.my-pag /deep/ .ngx-pagination li:hover {
+  color: #404040;
+  border: 1px solid red;
+}
+
+.my-pag /deep/ .ngx-pagination li:hover a {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+
+.list {
+  text-align: center;
+}
+
+.list ul {
+  text-align: left;
+}
 /*# sourceMappingURL=news.component.css.map */
