layout search pagination

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
         </button>
     </div>
     <div class="header__logo ">
-        <a href="../../index.html">
+        <a class="flex justify-content-center " href="../../index.html">
             <img src="../../assets/img-home/logo.jpg" alt="logo" class="first-image">
             <img src="../../assets/img-home/FlowerShop.jpg" alt="shop" class="align-items-center second-image">
         </a>
@@ -23,7 +23,7 @@
             <li class="menu"><a routerLink="contacts" routerLinkActive="active"
                     [routerLinkActiveOptions]="{exact:true}">CONTACTS</a></li>
             <div class=" header__icon flex justify-content-between">
-                <li><a class="header__search " href="#" routerLinkActive="active"
+                <li><a class="header__search " routerLink="search" routerLinkActive="active"
                         [routerLinkActiveOptions]="{exact:true}"></a> </li>
                 <li>
                     <a class="header__bag " href="#" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
