--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,9 @@
 <header class="header">
+
     <div class="header__popup">
-        <button>
-            <img src="../../assets/img-home/mobile_menu.png" alt="popupicon">
-        </button>
+
+        <button><img src="../../assets/img-home/mobile_menu.png" alt="menu"></button>
+
     </div>
     <div class="header__logo ">
         <a class="flex justify-content-center " href="../../index.html">
