--- a/src/app/Modules/home/home.component.scss
+++ b/src/app/Modules/home/home.component.scss
@@ -35,7 +35,38 @@
     max-width: 100%;
     margin: 0 auto;
 }
+.container__h {
+    .swiper {
+        width: 100%;
+        height: 30rem;
+    }
+    .container__head {
+        width: 100%;
+    }
+    .swiper-slide {
+        text-align: top;
+        background: #fff;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        -webkit-justify-content: start;
+        justify-content: start;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: top;
+    }
 
+    .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
 .container__head {
     background: url("../../../assets/img-home/Rectangle\ 1.png") 0 0 no-repeat;
     background-size: 100% 100%;
@@ -70,8 +101,7 @@
 .container__delivery {
     background: url("../../../assets/img-home/Rectangle\ 3.png") 0 0 no-repeat;
     background-size: 100% 100%;
-    width: 100%;
-    margin-right: 1rem;
+    width: 50%;
 }
 
 .delivery__logo {
@@ -80,6 +110,7 @@
 }
 .delivery__logo img {
     height: 90%;
+    padding-left: 6.2rem;
 }
 .title {
     font-weight: bold;
@@ -165,6 +196,8 @@ h6 {
     margin-bottom: 3rem;
 }
 .container__item {
+    opacity: 0.7;
+    transition: opacity 1s linear;
     width: 18rem;
     height: 28rem;
     border: 1px solid #e7e7e7;
@@ -172,6 +205,7 @@ h6 {
     border-radius: 10px;
     padding-bottom: 1rem;
     position: relative;
+
     img {
         width: 80%;
         margin: 1.5rem;
@@ -194,6 +228,7 @@ h6 {
     }
     button {
         display: none;
+        transition: opacity 1s linear;
     }
 }
 .opacity {
@@ -205,6 +240,8 @@ h6 {
     text-align: left;
 }
 .container__item:hover {
+    transition: 1s;
+    opacity: 1;
     width: 18rem;
     height: 35rem;
     position: absolute;
