--- a/src/app/Modules/news/news.component.scss
+++ b/src/app/Modules/news/news.component.scss
@@ -69,8 +69,7 @@
 .container__delivery {
     background: url("../../../assets/img-home/Rectangle\ 3.png") 0 0 no-repeat;
     background-size: 100% 100%;
-    width: 100%;
-    margin-right: 1rem;
+    width: 50%;
 }
 
 .delivery__logo {
@@ -79,6 +78,7 @@
 }
 .delivery__logo img {
     height: 90%;
+    padding-left: 6.2rem;
 }
 .title {
     font-weight: bold;
@@ -109,6 +109,7 @@
     display: flex;
     align-items: center;
 }
+
 .container__titles {
     margin: 0.5rem auto 0.5rem;
     font-weight: bold;
