--- a/src/app/Modules/news/newsarticle/newsarticle.component.scss
+++ b/src/app/Modules/news/newsarticle/newsarticle.component.scss
@@ -81,8 +81,7 @@
 .container__delivery {
     background: url("../../../../assets/img-home/Rectangle\ 3.png") 0 0 no-repeat;
     background-size: 100% 100%;
-    width: 100%;
-    margin-right: 1rem;
+    width: 50%;
 }
 
 .delivery__logo {
@@ -91,6 +90,7 @@
 }
 .delivery__logo img {
     height: 90%;
+    padding-left: 6.2rem;
 }
 .title {
     font-weight: bold;
