--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -28,14 +28,14 @@
             <div class="footer__media">
                 <p class="footer__title">Social media</p>
                 <ul class="flex justify-content-between">
-                    <li><a href="https://www.elinext.com." target="_blank"><img class="footer__social"
+                    <li><a href="https://www.elinext.com" target="_blank"><img class="footer__social"
                                 src="../assets/img-home/ic-facebook.png" alt="facebook"></a></li>
-                    <li><a href="https://www.elinext.com." target="_blank"><img class="footer__social"
+                    <li><a href="https://www.elinext.com" target="_blank"><img class="footer__social"
                                 src="../assets/img-home/ic-tiktok.png" alt="tiktok"></a></li>
-                    <li><a href="https://www.elinext.com." target="_blank"><img class="footer__social"
+                    <li><a href="https://www.elinext.com" target="_blank"><img class="footer__social"
                                 src="../assets/img-home/ic-vk.png" alt="vk"></a>
                     </li>
-                    <li><a href="https://www.elinext.com." target="_blank"><img class="footer__social"
+                    <li><a href="https://www.elinext.com" target="_blank"><img class="footer__social"
                                 src="../assets/img-home/ic-instagram.png" alt="instagram"></a></li>
                 </ul>
             </div>
